src/antlr4/TensorLangParser.cpp

// Generated from src/antlr4/TensorLang.g4 by ANTLR 4.13.2


#include "TensorLangListener.h"
#include "TensorLangVisitor.h"

#include "TensorLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct TensorLangParserStaticData final {
  TensorLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TensorLangParserStaticData(const TensorLangParserStaticData&) = delete;
  TensorLangParserStaticData(TensorLangParserStaticData&&) = delete;
  TensorLangParserStaticData& operator=(const TensorLangParserStaticData&) = delete;
  TensorLangParserStaticData& operator=(TensorLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tensorlangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TensorLangParserStaticData> tensorlangParserStaticData = nullptr;

void tensorlangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tensorlangParserStaticData != nullptr) {
    return;
  }
#else
  assert(tensorlangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TensorLangParserStaticData>(
    std::vector<std::string>{
      "program", "configDirective", "statement", "tensorDeclaration", "typeID", 
      "datatype", "layout", "dimSeq", "dimToken", "activeEpochBlock", "assignment", 
      "expr", "lambdaPred", "logicalExpr", "logicalAndExpr", "logicalNotExpr", 
      "floatComparison", "floatExpr", "floatTerm", "floatFactor"
    },
    std::vector<std::string>{
      "", "'use'", "'device'", "';'", "'cluster'", "'optimizer'", "'decay'", 
      "'='", "'MetaTensor'", "'<'", "','", "'>'", "'float'", "'double'", 
      "'int'", "'Dense'", "'SparseCOO'", "'epoch_loop'", "'('", "')'", "'{'", 
      "'}'", "'load_safetensors'", "'from_scalar'", "'*'", "'+'", "'-'", 
      "'%'", "'.element_wise_mul'", "'.apply'", "'()'", "'.reduce_all_sum()'", 
      "'.reduce_sum'", "'.permute_axes'", "'.gather_nd'", "'.tensor_theta_join'", 
      "'.evaluate_existential'", "'.evaluate_universal'", "'->'", "'||'", 
      "'&&'", "'!'", "'/'", "'abs'", "'cell'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "DEVICE", "BOOLEAN", "OPT_TYPE", 
      "DECAY_TYPE", "CELL_OP", "COMP_OP", "INTRINSIC_OP", "INT", "FLOAT", 
      "ID", "STRING", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tensorlangParserStaticData = std::move(staticData);
}

}

TensorLangParser::TensorLangParser(TokenStream *input) : TensorLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TensorLangParser::TensorLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TensorLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tensorlangParserStaticData->atn, tensorlangParserStaticData->decisionToDFA, tensorlangParserStaticData->sharedContextCache, options);
}

TensorLangParser::~TensorLangParser() {
  delete _interpreter;
}

const atn::ATN& TensorLangParser::getATN() const {
  return *tensorlangParserStaticData->atn;
}

std::string TensorLangParser::getGrammarFileName() const {
  return "TensorLang.g4";
}

const std::vector<std::string>& TensorLangParser::getRuleNames() const {
  return tensorlangParserStaticData->ruleNames;
}

const dfa::Vocabulary& TensorLangParser::getVocabulary() const {
  return tensorlangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TensorLangParser::getSerializedATN() const {
  return tensorlangParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

TensorLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TensorLangParser::ProgramContext::EOF() {
  return getToken(TensorLangParser::EOF, 0);
}

std::vector<TensorLangParser::ConfigDirectiveContext *> TensorLangParser::ProgramContext::configDirective() {
  return getRuleContexts<TensorLangParser::ConfigDirectiveContext>();
}

TensorLangParser::ConfigDirectiveContext* TensorLangParser::ProgramContext::configDirective(size_t i) {
  return getRuleContext<TensorLangParser::ConfigDirectiveContext>(i);
}

std::vector<TensorLangParser::StatementContext *> TensorLangParser::ProgramContext::statement() {
  return getRuleContexts<TensorLangParser::StatementContext>();
}

TensorLangParser::StatementContext* TensorLangParser::ProgramContext::statement(size_t i) {
  return getRuleContext<TensorLangParser::StatementContext>(i);
}


size_t TensorLangParser::ProgramContext::getRuleIndex() const {
  return TensorLangParser::RuleProgram;
}

void TensorLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void TensorLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any TensorLangParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::ProgramContext* TensorLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TensorLangParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TensorLangParser::T__0) {
      setState(40);
      configDirective();
      setState(45);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(47); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(46);
      statement();
      setState(49); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 18014398509613312) != 0));
    setState(51);
    match(TensorLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConfigDirectiveContext ------------------------------------------------------------------

TensorLangParser::ConfigDirectiveContext::ConfigDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TensorLangParser::ConfigDirectiveContext::getRuleIndex() const {
  return TensorLangParser::RuleConfigDirective;
}

void TensorLangParser::ConfigDirectiveContext::copyFrom(ConfigDirectiveContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- OptimizerConfigContext ------------------------------------------------------------------

tree::TerminalNode* TensorLangParser::OptimizerConfigContext::OPT_TYPE() {
  return getToken(TensorLangParser::OPT_TYPE, 0);
}

TensorLangParser::OptimizerConfigContext::OptimizerConfigContext(ConfigDirectiveContext *ctx) { copyFrom(ctx); }

void TensorLangParser::OptimizerConfigContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptimizerConfig(this);
}
void TensorLangParser::OptimizerConfigContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptimizerConfig(this);
}

std::any TensorLangParser::OptimizerConfigContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitOptimizerConfig(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DecayConfigContext ------------------------------------------------------------------

tree::TerminalNode* TensorLangParser::DecayConfigContext::DECAY_TYPE() {
  return getToken(TensorLangParser::DECAY_TYPE, 0);
}

tree::TerminalNode* TensorLangParser::DecayConfigContext::FLOAT() {
  return getToken(TensorLangParser::FLOAT, 0);
}

TensorLangParser::DecayConfigContext::DecayConfigContext(ConfigDirectiveContext *ctx) { copyFrom(ctx); }

void TensorLangParser::DecayConfigContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecayConfig(this);
}
void TensorLangParser::DecayConfigContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecayConfig(this);
}

std::any TensorLangParser::DecayConfigContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitDecayConfig(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeviceConfigContext ------------------------------------------------------------------

tree::TerminalNode* TensorLangParser::DeviceConfigContext::DEVICE() {
  return getToken(TensorLangParser::DEVICE, 0);
}

TensorLangParser::DeviceConfigContext::DeviceConfigContext(ConfigDirectiveContext *ctx) { copyFrom(ctx); }

void TensorLangParser::DeviceConfigContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeviceConfig(this);
}
void TensorLangParser::DeviceConfigContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeviceConfig(this);
}

std::any TensorLangParser::DeviceConfigContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitDeviceConfig(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ClusterConfigContext ------------------------------------------------------------------

tree::TerminalNode* TensorLangParser::ClusterConfigContext::BOOLEAN() {
  return getToken(TensorLangParser::BOOLEAN, 0);
}

TensorLangParser::ClusterConfigContext::ClusterConfigContext(ConfigDirectiveContext *ctx) { copyFrom(ctx); }

void TensorLangParser::ClusterConfigContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClusterConfig(this);
}
void TensorLangParser::ClusterConfigContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClusterConfig(this);
}

std::any TensorLangParser::ClusterConfigContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitClusterConfig(this);
  else
    return visitor->visitChildren(this);
}
TensorLangParser::ConfigDirectiveContext* TensorLangParser::configDirective() {
  ConfigDirectiveContext *_localctx = _tracker.createInstance<ConfigDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 2, TensorLangParser::RuleConfigDirective);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<TensorLangParser::DeviceConfigContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(53);
      match(TensorLangParser::T__0);
      setState(54);
      match(TensorLangParser::T__1);
      setState(55);
      match(TensorLangParser::DEVICE);
      setState(56);
      match(TensorLangParser::T__2);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<TensorLangParser::ClusterConfigContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(57);
      match(TensorLangParser::T__0);
      setState(58);
      match(TensorLangParser::T__3);
      setState(59);
      match(TensorLangParser::BOOLEAN);
      setState(60);
      match(TensorLangParser::T__2);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<TensorLangParser::OptimizerConfigContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(61);
      match(TensorLangParser::T__0);
      setState(62);
      match(TensorLangParser::T__4);
      setState(63);
      match(TensorLangParser::OPT_TYPE);
      setState(64);
      match(TensorLangParser::T__2);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<TensorLangParser::DecayConfigContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(65);
      match(TensorLangParser::T__0);
      setState(66);
      match(TensorLangParser::T__5);
      setState(67);
      match(TensorLangParser::DECAY_TYPE);
      setState(68);
      match(TensorLangParser::FLOAT);
      setState(69);
      match(TensorLangParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

TensorLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TensorLangParser::TensorDeclarationContext* TensorLangParser::StatementContext::tensorDeclaration() {
  return getRuleContext<TensorLangParser::TensorDeclarationContext>(0);
}

TensorLangParser::ActiveEpochBlockContext* TensorLangParser::StatementContext::activeEpochBlock() {
  return getRuleContext<TensorLangParser::ActiveEpochBlockContext>(0);
}

TensorLangParser::AssignmentContext* TensorLangParser::StatementContext::assignment() {
  return getRuleContext<TensorLangParser::AssignmentContext>(0);
}


size_t TensorLangParser::StatementContext::getRuleIndex() const {
  return TensorLangParser::RuleStatement;
}

void TensorLangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void TensorLangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any TensorLangParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::StatementContext* TensorLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, TensorLangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TensorLangParser::T__7: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        tensorDeclaration();
        break;
      }

      case TensorLangParser::T__16: {
        enterOuterAlt(_localctx, 2);
        setState(73);
        activeEpochBlock();
        break;
      }

      case TensorLangParser::ID: {
        enterOuterAlt(_localctx, 3);
        setState(74);
        assignment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TensorDeclarationContext ------------------------------------------------------------------

TensorLangParser::TensorDeclarationContext::TensorDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TensorLangParser::TypeIDContext* TensorLangParser::TensorDeclarationContext::typeID() {
  return getRuleContext<TensorLangParser::TypeIDContext>(0);
}

tree::TerminalNode* TensorLangParser::TensorDeclarationContext::ID() {
  return getToken(TensorLangParser::ID, 0);
}

TensorLangParser::ExprContext* TensorLangParser::TensorDeclarationContext::expr() {
  return getRuleContext<TensorLangParser::ExprContext>(0);
}


size_t TensorLangParser::TensorDeclarationContext::getRuleIndex() const {
  return TensorLangParser::RuleTensorDeclaration;
}

void TensorLangParser::TensorDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTensorDeclaration(this);
}

void TensorLangParser::TensorDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTensorDeclaration(this);
}


std::any TensorLangParser::TensorDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitTensorDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::TensorDeclarationContext* TensorLangParser::tensorDeclaration() {
  TensorDeclarationContext *_localctx = _tracker.createInstance<TensorDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, TensorLangParser::RuleTensorDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    typeID();
    setState(78);
    match(TensorLangParser::ID);
    setState(79);
    match(TensorLangParser::T__6);
    setState(80);
    expr(0);
    setState(81);
    match(TensorLangParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIDContext ------------------------------------------------------------------

TensorLangParser::TypeIDContext::TypeIDContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TensorLangParser::DatatypeContext* TensorLangParser::TypeIDContext::datatype() {
  return getRuleContext<TensorLangParser::DatatypeContext>(0);
}

TensorLangParser::LayoutContext* TensorLangParser::TypeIDContext::layout() {
  return getRuleContext<TensorLangParser::LayoutContext>(0);
}

TensorLangParser::DimSeqContext* TensorLangParser::TypeIDContext::dimSeq() {
  return getRuleContext<TensorLangParser::DimSeqContext>(0);
}


size_t TensorLangParser::TypeIDContext::getRuleIndex() const {
  return TensorLangParser::RuleTypeID;
}

void TensorLangParser::TypeIDContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeID(this);
}

void TensorLangParser::TypeIDContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeID(this);
}


std::any TensorLangParser::TypeIDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitTypeID(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::TypeIDContext* TensorLangParser::typeID() {
  TypeIDContext *_localctx = _tracker.createInstance<TypeIDContext>(_ctx, getState());
  enterRule(_localctx, 8, TensorLangParser::RuleTypeID);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(TensorLangParser::T__7);
    setState(84);
    match(TensorLangParser::T__8);
    setState(85);
    datatype();
    setState(86);
    match(TensorLangParser::T__9);
    setState(87);
    layout();
    setState(88);
    match(TensorLangParser::T__9);
    setState(89);
    dimSeq();
    setState(90);
    match(TensorLangParser::T__10);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DatatypeContext ------------------------------------------------------------------

TensorLangParser::DatatypeContext::DatatypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TensorLangParser::DatatypeContext::getRuleIndex() const {
  return TensorLangParser::RuleDatatype;
}

void TensorLangParser::DatatypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDatatype(this);
}

void TensorLangParser::DatatypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDatatype(this);
}


std::any TensorLangParser::DatatypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitDatatype(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::DatatypeContext* TensorLangParser::datatype() {
  DatatypeContext *_localctx = _tracker.createInstance<DatatypeContext>(_ctx, getState());
  enterRule(_localctx, 10, TensorLangParser::RuleDatatype);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 28672) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LayoutContext ------------------------------------------------------------------

TensorLangParser::LayoutContext::LayoutContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t TensorLangParser::LayoutContext::getRuleIndex() const {
  return TensorLangParser::RuleLayout;
}

void TensorLangParser::LayoutContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLayout(this);
}

void TensorLangParser::LayoutContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLayout(this);
}


std::any TensorLangParser::LayoutContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitLayout(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::LayoutContext* TensorLangParser::layout() {
  LayoutContext *_localctx = _tracker.createInstance<LayoutContext>(_ctx, getState());
  enterRule(_localctx, 12, TensorLangParser::RuleLayout);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    _la = _input->LA(1);
    if (!(_la == TensorLangParser::T__14

    || _la == TensorLangParser::T__15)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DimSeqContext ------------------------------------------------------------------

TensorLangParser::DimSeqContext::DimSeqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TensorLangParser::DimTokenContext *> TensorLangParser::DimSeqContext::dimToken() {
  return getRuleContexts<TensorLangParser::DimTokenContext>();
}

TensorLangParser::DimTokenContext* TensorLangParser::DimSeqContext::dimToken(size_t i) {
  return getRuleContext<TensorLangParser::DimTokenContext>(i);
}


size_t TensorLangParser::DimSeqContext::getRuleIndex() const {
  return TensorLangParser::RuleDimSeq;
}

void TensorLangParser::DimSeqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDimSeq(this);
}

void TensorLangParser::DimSeqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TensorLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDimSeq(this);
}


std::any TensorLangParser::DimSeqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TensorLangVisitor*>(visitor))
    return parserVisitor->visitDimSeq(this);
  else
    return visitor->visitChildren(this);
}

TensorLangParser::DimSeqContext* TensorLangParser::dimSeq() {
  DimSeqContext *_localctx = _tracker.createInstance<DimSeqContext>(_ctx, getState());
  enterRule(_localctx, 14, TensorLangParser::RuleDimSeq);
  size_t _la = 0;
